[package]
name = "tnt-delivery-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
log = "0.4"
rand = "0.8"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "5"
teloxide = { version = "0.13", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tokio-util = "0.7"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

[lib]
name = "tnt_delivery_bot"
path = "src/lib.rs"

[[bin]]
name = "tnt-delivery-bot"
path = "src/main.rs"
